--- a/ilab/src/main/webapp/procesos/tomaMuestra/search.xhtml
+++ b/ilab/src/main/webapp/procesos/tomaMuestra/search.xhtml
@@ -113,7 +113,17 @@
 						<f:param name="id" value="#{_item.idTomaMuestra}"/>
 						<h:outputText id="itemIdTomaMuestraExamenEstado" value="#{_item.solicitudDetalle.flagEstado}"/>
 					</h:link>
-				</h:column>	
+				</h:column>
+				<h:column>
+					<f:facet name="header">
+						<h:outputText value="Opciones"/>
+					</f:facet>
+					<h:link outcome="/procesos/tomaMuestra/registroResultados" styleClass="btn btn-primary">
+						<f:param name="id" value="#{_item.solicitudDetalle.idSolicitudDetalle}"/>
+						<h:outputText id="itemUsuarioPassword" value="Resultados"/>
+					</h:link>
+				</h:column>
+					
 			</h:dataTable>
 			<ui:include src="/resources/scaffold/paginator.xhtml">
 				<ui:param name="paginatorBean" value='#{tomaMuestraBean}'/>
