toma de muestras update

--- a/ilab/src/main/webapp/procesos/tomaMuestra/registroResultados.xhtml
+++ b/ilab/src/main/webapp/procesos/tomaMuestra/registroResultados.xhtml
@@ -16,7 +16,7 @@
 	<ui:param name="pageTitle" value="View Solicitud Detalle"/>
 
 	<ui:define name="header">
-		Registro Resultados
+		Registro Resultados de Laboratorios
 	</ui:define>
 
 	<ui:define name="subheader">
