--- a/ilab/src/main/webapp/resources/scaffold/pageTemplate.xhtml
+++ b/ilab/src/main/webapp/resources/scaffold/pageTemplate.xhtml
@@ -192,7 +192,7 @@
 
 	<footer>
 		<div id="footer-wrapper">
-	    	<p>Powered by <a href="http://jboss.org/forge">Forge</a></p>
+	    	<p>Universidad <a href="http://www.utepsa.edu">UTEPSA 2015</a></p>
 	    </div>
 	</footer>
 
